# smushclient

./: .clang-format  .clangd  .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  api.lua
smushclient/: Cargo.toml
smushclient-engine/: Cargo.toml
smushclient-plugins/: Cargo.toml
smushclient-plugins/src/: cursor_vec.rs  error.rs  hmsn.rs  in_place.rs  lib.rs  newline.rs  plugin.rs  regex.rs  sort_on_drop.rs  xml.rs
smushclient-plugins/src/plugins/: indexed.rs  matching.rs  mod.rs  pad.rs  plugin.rs
smushclient-plugins/src/regex/: builder.rs  captures.rs  error.rs  mod.rs
smushclient-plugins/src/send/: alias.rs  mod.rs  occurrence.rs  reaction.rs  send_to.rs  sender.rs  timer.rs  trigger.rs
smushclient-qt/: CMakeLists.txt  build.bat  build.sh  run.bat  run.sh  vcpkg.json
smushclient-qt-lib/: Cargo.toml  build.rs
smushclient-qt-lib/include/core/: qchar.h  qstringext.h
smushclient-qt-lib/include/gui/: qbrush.h  qfontinfo.h  qfontmetrics.h  qfontmetricsf.h  qtextcharformat.h  qtextcursor.h  qtextformat.h  qtextlength.h
smushclient-qt-lib/include/widgets/: qabstractscrollarea.h
smushclient-qt-lib/src/: lib.rs  macros.rs
smushclient-qt-lib/src/core/: mod.rs  qchar.cpp  qchar.rs  qpair.cpp  qpair.rs  qstringext.rs  qt.rs
smushclient-qt-lib/src/gui/: mod.rs  qbrush.cpp  qbrush.rs  qfontinfo.cpp  qfontinfo.rs  qfontmetrics.cpp  qfontmetrics.rs  qfontmetricsf.cpp  qfontmetricsf.rs  qtextcharformat.cpp  qtextcharformat.rs  qtextcursor.rs  qtextformat.cpp  qtextformat.rs  qtextlength.cpp  qtextlength.rs
smushclient-qt-lib/src/widgets/: mod.rs  qabstractscrollarea.rs  qwidget.rs
smushclient-qt/cpp/: audio.cpp  audio.h  bytes.h  casting.h  client.cpp  client.h  commandhistory.cpp  commandhistory.h  config.h  document.cpp  document.h  enumbounds.h  enumbuttongroup.h  environment.cpp  environment.h  fieldconnector.h  hotkeys.cpp  hotkeys.h  image.cpp  image.h  layout.cpp  layout.h  link.cpp  link.h  localization.cpp  localization.h  lookup.h  main.cpp  mudcursor.cpp  mudcursor.h  settings.cpp  settings.h  spans.cpp  spans.h  stringmap.h  timer_map.h  timermap.h  variableview.h  viewbuilder.cpp  viewbuilder.h
smushclient-qt/cpp/bridge/: document.cpp  document.h  forward.h  scriptengine.cpp  scriptengine.h  timekeeper.cpp  timekeeper.h  treebuilder.cpp  treebuilder.h  variableview.h  viewbuilder.cpp  viewbuilder.h  views.h
smushclient-qt/cpp/model/: alias.cpp  alias.h  colormap.cpp  colormap.h  plugin.cpp  plugin.h  sender.cpp  sender.h  timer.cpp  timer.h  trigger.cpp  trigger.h
smushclient-qt/cpp/native/: native.cpp  native.h  result.h  window.h  window.mm
smushclient-qt/cpp/scripting/: argstream.h  callbacktrigger.cpp  callbacktrigger.h  databaseconnection.cpp  databaseconnection.h  errors.cpp  errors.h  hotspot.cpp  hotspot.h  imagefilters.cpp  imagefilters.h  localization.cpp  localization.h  luaapi.cpp  luaapi.h  luaglobals.cpp  luaglobals.h  lualibs.cpp  lualibs.h  luaq.cpp  luaq.h  luautils.cpp  miniwindow.cpp  miniwindow.h  plugin.cpp  plugin.h  plugincallback.cpp  plugincallback.h  qlua.cpp  qlua.h  scriptapi.cpp  scriptapi.h  scriptapi_api.cpp  scriptapi_getinfo.cpp  scriptapi_senders.cpp  scriptapi_window.cpp  scriptengine.cpp  scriptengine.h  scriptenums.cpp  scriptenums.h  (+8 more)
smushclient-qt/cpp/ui/: app.cpp  app.h  app.ui  filterdemo.cpp  filterdemo.h  filterdemo.ui  finddialog.cpp  finddialog.h  finddialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  mudstatusbar.cpp  mudstatusbar.h  mudstatusbar.ui  notepad.cpp  notepad.h  notepad.ui  pluginsdialog.cpp  pluginsdialog.h  pluginsdialog.ui  serverstatus.cpp  serverstatus.h  serverstatus.ui  settings.cpp  settings.h  settings.ui  statusbarstat.cpp  statusbarstat.h  statusbarstat.ui  worldprefs.cpp  worldprefs.h  worldprefs.ui  worldtab.cpp  worldtab.h  worldtab.ui
smushclient-qt/languages/: SmushClient_en_GB.ts
smushclient-qt/lib-include/: lua_lib_compat.c
smushclient-qt/resources/: resources.qrc
smushclient-qt/resources/appicon/: appicon.icns
smushclient-qt/resources/logo/: SmushClient.rc
smushclient-qt/rust/: Cargo.toml  build.rs
smushclient-qt/rust/include/: abstractdocument.h  abstracttimekeeper.h  forward.h  views.h
smushclient-qt/rust/src/: adapters.rs  bridge.rs  bridge_audio.rs  bridge_ffi.rs  client.rs  client_bridge.rs  client_ffi.rs  colors.rs  convert.rs  get_info.rs  handler.rs  impls.rs  lib.rs  logging.rs  modeled.rs  output.rs  results.rs  sender.rs  sync.rs  text_formatter.rs  timers.rs  world.rs
smushclient-scripting/: Cargo.toml
smushclient-scripting/src/: callback.rs  convert.rs  lib.rs
smushclient-scripting/src/plugins/: file.rs  handler.rs  indexed.rs  mod.rs  pad.rs  plugin.rs
smushclient-scripting/src/send/: mod.rs  send_to.rs  timer.rs  trigger.rs
smushclient-swift/: Cargo.toml  build.rs
smushclient-swift/SmushClient/: BridgingHeader.h  xcode-build-rust.sh
smushclient-swift/SmushClient/SmushClient/: AppDelegate.swift  Info.plist  MainViewController.swift  NotificationName.swift  SmushfileDocument.swift  Stories.swift  WindowController.swift
smushclient-swift/SmushClient/SmushClient.xcodeproj/: project.pbxproj
smushclient-swift/SmushClient/SmushClientTests/: SmushClientTests.swift
smushclient-swift/SmushClient/SmushClientUITests/: SmushClientUITests.swift  SmushClientUITestsLaunchTests.swift
smushclient-swift/src/: bindings.rs  bridge.rs  client.rs  convert.rs  enums.rs  error.rs  impls.rs  io.rs  lib.rs  mud.rs  output.rs  shared.rs  stream.rs  sync.rs  world.rs
smushclient/src/: generate.rs  handler.rs  lib.rs
smushclient/src/audio/: error.rs  file_playback.rs  looping.rs  mod.rs  playback.rs  sinks.rs  stream.rs
smushclient/src/client/: clipboard.rs  info.rs  log_file.rs  logger.rs  mod.rs  reuse_vec.rs  smushclient.rs  timers.rs  variables.rs
smushclient/src/collections/: lifetime_vec.rs  mod.rs  reuse_vec.rs  sort_on_drop.rs
smushclient/src/get_info/: alias.rs  mod.rs  plugin.rs  timer.rs  trigger.rs  visitor.rs
smushclient/src/import/: color.rs  error.rs  imports.rs  mod.rs  types.rs  world.rs  xml_enum.rs
(+471 files in other folders)
