[workspace]
resolver = "2"
members = [
  "smushclient",
  "smushclient-plugins",
  "smushclient-qt/rust",
  "smushclient-qt-lib",
  "smushclient-swift",
]

[workspace.package]
edition = "2024"
repository = "https://github.com/jnbooth/smushclient/"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
inline_always = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
struct_excessive_bools = "allow"
too_many_lines = "allow"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_doc = "warn"

[workspace.dependencies.chrono]
version = "0.4.42"
features = ["serde"]

[workspace.dependencies.cxx]
version = "1.0.192"

[workspace.dependencies.cxx-qt]
git = "https://github.com/KDAB/cxx-qt"
version = "0.8.0"

[workspace.dependencies.cxx-qt-build]
git = "https://github.com/KDAB/cxx-qt"
version = "0.8.0"

[workspace.dependencies.cxx-qt-lib]
git = "https://github.com/KDAB/cxx-qt"
version = "0.8.0"
features = ["chrono", "qt_gui"]

[workspace.dependencies.flagset]
version = "0.4.7"
features = ["serde"]

[workspace.dependencies.mud-transformer]
git = "https://github.com/jnbooth/mxp"
version = "0.12.3"
features = ["serde"]

[workspace.dependencies.mxp]
git = "https://github.com/jnbooth/mxp"
version = "0.12.3"
features = ["serde"]

[workspace.dependencies.serde]
version = "1.0.228"
features = ["derive"]

[workspace.dependencies.tokio]
version = "1.48.0"
