[workspace]
resolver = "2"
members = [
  "smushclient",
  "smushclient-graphics",
  "smushclient-plugins",
  "smushclient-qt/rust",
  "smushclient-qt-lib",
  "smushclient-swift",
]

[workspace.package]
edition = "2024"
authors = ["Joshua Booth <joshua.n.booth@gmail.com>"]
repository = "https://github.com/jnbooth/smushclient/"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
inline_always = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
struct_excessive_bools = "allow"
too_many_lines = "allow"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_doc = "warn"
unreadable_literal = "allow"

[workspace.dependencies]
cxx = "1.0.192"
cxx-qt = "0.8.0"
cxx-qt-build = "0.8.0"
cxx-qt-lib = { version = "0.8.0", features = ["chrono", "qt_gui"] }

[workspace.dependencies.chrono]
version = "0.4.42"
features = ["serde"]

[workspace.dependencies.flagset]
version = "0.4.7"
features = ["serde"]

[workspace.dependencies.mud-transformer]
git = "https://github.com/jnbooth/mxp"
version = "0.16.4"
features = ["serde"]

[workspace.dependencies.mxp]
git = "https://github.com/jnbooth/mxp"
version = "0.16.4"
features = ["serde"]

[workspace.dependencies.serde]
version = "1.0.228"
features = ["derive"]

[workspace.dependencies.tokio]
version = "1.48.0"
