[package]
name = "smushclient-engine"
version = "0.2.1"
edition = "2021"

[lints]
workspace = true

[dependencies.enumeration]
git = "https://github.com/jnbooth/enumeration"
version = "0.7.0"

[dependencies.mud-stream]
git = "https://github.com/jnbooth/mxp"
version = "0.2.1"

[dependencies.mud-transformer]
git = "https://github.com/jnbooth/mxp"
version = "0.2.1"

[dependencies.tokio]
version = "1.38.0"
features = ["full"]
