[package]
name = "smushclient-plugins"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
chrono = { workspace = true }
flagset = { workspace = true }
mxp = { workspace = true }
pcre2 = { version = "0.2.9" }
quick-xml = { version = "0.36.1", features = ["serialize"] }
serde = { workspace = true }
