[package]
name = "smushclient-plugins"
version = "0.1.0"
edition.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
chrono = { workspace = true }
flagset = { workspace = true }
mxp = { workspace = true }
pcre2 = { version = "0.2.11" }
quick-xml = { version = "0.38.4", features = ["serialize"] }
serde = { workspace = true }
serde-this-or-that = "0.5.0"

[features]
send = []
