[package]
name = "smushclient-qt-lib"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
links = "smushclient-qt-lib"

[lints]
workspace = true

[dependencies]
cxx = { workspace = true }
cxx-qt = { workspace = true }
cxx-qt-lib = { workspace = true }

[build-dependencies]
cxx-qt-build = { workspace = true }

[features]
link_qt_object_files = [
  "cxx-qt-build/link_qt_object_files",
  "cxx-qt-lib/link_qt_object_files",
]
