[package]
name = "smushclient-scripting"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
enumeration = { git = "https://github.com/jnbooth/enumeration", version = "0.7.0" }
fancy-regex = "0.13.0"
mlua = { version = "0.9.9", features = ["async", "luajit", "send", "vendored"] }
quick-xml = { version = "0.36.1", features = ["serialize"] }
serde = { version = "1.0.204", features = ["derive"] }
