[package]
name = "smushclient-swift"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["staticlib"]

[lints]
workspace = true

[dependencies.chrono]
version = "0.4.38"
features = ["serde"]

[dependencies.flagset]
version = "0.4.6"
features = ["serde"]

[dependencies.mud-transformer]
git = "https://github.com/jnbooth/mxp"
rev = "e3cb450045e5d372e6fa1bc0871bc6256bf80692"

[dependencies.smushclient]
path = "../smushclient"
features = ["async"]

[dependencies.smushclient-plugins]
path = "../smushclient-plugins"

[dependencies.swift-bridge]
git = "https://github.com/jnbooth/swift-bridge"
version = "0.1"
rev = "d6090a0e0641101260c2e9d5d31b0a8195f6c138"
features = ["async", "compatibility"]

[dependencies.tokio]
version = "1.38.0"
features = ["full"]

[build-dependencies.swift-bridge-build]
git = "https://github.com/jnbooth/swift-bridge"
version = "0.1"
rev = "d6090a0e0641101260c2e9d5d31b0a8195f6c138"
