[package]
name = "smushclient-swift"
version = "0.1.0"
build = "build.rs"
edition.workspace = true
repository.workspace = true

[lib]
crate-type = ["staticlib"]

[lints]
workspace = true

[dependencies]
chrono = { workspace = true }
flagset = { workspace = true }
mud-transformer = { workspace = true }
smushclient = { path = "../smushclient", features = ["async"] }
smushclient-plugins = { path = "../smushclient-plugins" }
tokio = { workspace = true, features = ["full"] }

[dependencies.swift-bridge]
git = "https://github.com/jnbooth/swift-bridge"
version = "0.1"
rev = "d6090a0e0641101260c2e9d5d31b0a8195f6c138"
features = ["async", "compatibility"]

[build-dependencies.swift-bridge-build]
git = "https://github.com/jnbooth/swift-bridge"
version = "0.1"
rev = "d6090a0e0641101260c2e9d5d31b0a8195f6c138"
