[package]
name = "smushclient-swift"
version = "0.1.0"
build = "build.rs"
edition.workspace = true
repository.workspace = true

[lib]
crate-type = ["staticlib"]

[lints]
workspace = true

[dependencies]
chrono = { workspace = true }
flagset = { workspace = true }
mud-transformer = { workspace = true }
smushclient = { path = "../smushclient", features = ["async"] }
smushclient-plugins = { path = "../smushclient-plugins" }
tokio = { workspace = true, features = ["full"] }

[dependencies.swift-bridge]
version = "0.1.58"
features = ["async"]

[build-dependencies.swift-bridge-build]
version = "0.1.58"
