[package]
name = "smushclient"
version = "0.0.0"
edition.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
bincode = "1.3.3"
chrono = { workspace = true }
flagset = { workspace = true }
mud-transformer = { workspace = true }
serde = { workspace = true }
smushclient-plugins = { path = "../smushclient-plugins" }

[dependencies.postcard]
version = "1.1.3"
features = ["use-std"]

[dependencies.rodio]
version = "0.21.1"
default-features = false
features = ["playback", "symphonia-all"]
optional = true

[dependencies.tokio]
workspace = true
features = ["io-util", "net"]
optional = true

[features]
async = ["tokio"]
audio = ["rodio"]
