[package]
name = "smushclient"
version = "0.0.0"
edition.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
arboard = "3.6.1"
chrono = { workspace = true }
flagset = { workspace = true }
html-escape = "0.2.13"
mud-transformer = { workspace = true }
serde = { workspace = true }
smushclient-plugins = { path = "../smushclient-plugins" }

[dependencies.postcard]
version = "1.1.3"
features = ["use-std"]

[dependencies.rodio]
version = "0.21.1"
default-features = false
features = ["playback", "symphonia-all"]

[dependencies.tokio]
workspace = true
features = ["io-util", "net"]
optional = true

[features]
async = ["tokio", "smushclient-plugins/send"]
