[package]
name = "smushclient_qt"
version = "0.1.0"
edition.workspace = true
repository.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["staticlib"]

[dependencies.chrono]
workspace = true

[dependencies.cxx]
version = "1.0.192"

[dependencies.cxx-qt]
git = "https://github.com/jnbooth/cxx-qt"
rev = "37ebd3be62fcca469c4ce98b004c4b7ca99f1905"

[dependencies.cxx-qt-lib]
git = "https://github.com/jnbooth/cxx-qt"
rev = "37ebd3be62fcca469c4ce98b004c4b7ca99f1905"
features = ["chrono", "qt_gui"]

[dependencies.cxx-qt-io]
git = "https://github.com/jnbooth/cxx-qt-io"
rev = "4b456cd53865579ee5644b5d13351f9971bf4025"
version = "0.2.0"
features = ["full"]

[dependencies.flagset]
workspace = true

[dependencies.mud-transformer]
workspace = true

[dependencies.smushclient]
path = "../../smushclient"
features = ["audio"]

[dependencies.smushclient-plugins]
path = "../../smushclient-plugins"

[build-dependencies.cxx-qt-build]
git = "https://github.com/jnbooth/cxx-qt"
rev = "37ebd3be62fcca469c4ce98b004c4b7ca99f1905"

[features]
link_qt_object_files = [
  "cxx-qt-build/link_qt_object_files",
  "cxx-qt-lib/link_qt_object_files",
  "cxx-qt-io/link_qt_object_files",
]
